# SOM-Toolkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.manifest  build.ps1  cli.py  main.py  main.spec  pyproject.toml  requirements.txt  setup.py  test.DRCxml
SOMcreator/: __init__.py  classes.py
SOMcreator/Template/: __init__.py  fast_template.txt  template.txt
SOMcreator/bsdd/: __init__.py  bsdd_class.py  bsdd_dictionary.py  bsdd_property.py  class_table.md  language.json  transformer.py
SOMcreator/constants/: __init__.py  ifc_datatypes.py  json_constants.py  value_constants.py
SOMcreator/core/: export_excel.py  ifctosql.py
SOMcreator/datastructure/: __init__.py  aggregation.py  attribute.py  base.py  class_.py  object_.py  project.py  project_filter.py  property_.py  propertyset.py  som_json.py
SOMcreator/exporter/: __init__.py
SOMcreator/external_software/: allplan.py  card1.py  revit.py  (+1 more)
desiteRuleCreator/: classes.py  constants.py  desite_export.py  filehandling.py  io_messages.py  main_window.py  object_widget.py  property_list_widget.py  property_widget.py  propertyset_window.py  run.py  script_widget.py
desiteScripts/: building_structure_inheritance.js  create_building_structure.js  create_building_structure_v2.js  create_viewpoints.js  create_viewpoints_by_model.js  fill_building_structure.js  import_boq.js  import_boq_2.7.js  modelcheck.js
examples/: bsdd_example.json  example.py
som_gui/: __init__.py  __main__.py  _add_module.py  _create_pyproject.py  _update_tools.py  main_window.py  requirements.txt  som_gui.pyproject
src/: cli.py
(+1420 files in other folders)
