# pyproject.toml

[build-system]
requires = ["setuptools", "wheel", "lxml"]
build-backend = "setuptools.build_meta"

[project]
name = "SOMcreator"
description = "create simple Datastructures for BIM Models"
requires-python = ">=3.9"
keywords = ["BIM", "SOM"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lxml",
    "jinja2",
    "openpyxl",
    "anytree"
]
dynamic = ["version"]
[tool.setuptools.dynamic]
version = { attr = "SOMcreator.__version__" }
[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true
[tool.setuptools.packages.find]


[project.entry-points.pyinstaller40]
hook-dirs = "SOMcreator.templates.__pyinstaller:get_hook_dirs"